Adding after-steps commented for Hipchat

--- a/wercker.yml
+++ b/wercker.yml
@@ -18,3 +18,9 @@ build:
         name: run test
         code: |
           python hello_world.py
+
+  # after-steps:
+  #   - hipchat-notify:
+  #     token: $HIPCHAT_TOKEN
+  #     room-id: id
+  #     from-name: name
